...
    DateTime? registeredOn,
    bool? hasScheduledLesson,
    this.isCanceled,
  }) : super(
          id: id,
          name: name,
          email: email,
          password: password,
          isMentor: isMentor,
          organization: organization,
          field: field,
          timeZone: timeZone,
          availabilities: availabilities,
          isAvailable: isAvailable,
...
